semgrep/tests/e2e/snapshots/test_rule_parser/test_rule_parser__failure__error_messages/bad1/error.txt
error: invalid operand
  --> rules/syntax/bad1.yaml:4
4  |       - pattern-inside:
   |         ^^^^^^^^^^^^^^
5  |         - pattern: $X == $X
6  |         - pattern: $X != $X
7  |         - patterns:
8  |           - pattern-inside: |
9  |               def __init__(...):
10 |                   ...
11 |           - pattern: self.$X == self.$X
12 |       - pattern-not: 1 == 1

operand for pattern-inside must be a string, but instead was list

run with --strict and there were 1 errors loading configs
